k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-mercado
  labels:
    istio-injection: enabled
