k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: api-mercado
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - name: http
      port: 8000
      targetPort: http
